# neophytic-rooms-green

./: .gitignore  Dockerfile  README.md  pyproject.toml  viz.py
benchmarks/: encodings.json
rooms/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
rooms/server/: Dockerfile  __init__.py  app.py  environment_logic.py  rooms_environment.py
src/: agent.py  benchmark_config.py  benchmark_runner.py  cli.py  executor.py  local_runtime.py  server.py
src/benchmarks/: room_gen.py  standard_systems.json
tests/: conftest.py  test_agent.py
